--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="images/title_icon.ico" type="image/icon type" />
+
+    <title>Foods Landing Page</title>
   </head>
   <body>
     <div class="parent">
